--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=3000
 MONGODB_URI=mongodb+srv://mfaisalusama:zjasUMI2RHCp3Fta@cluster0.1hxkj4a.mongodb.net/Codistan
 
-REDIS_URL=redis://localhost:6379
+REDIS_URL=redis://127.0.0.1:6379
