--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REDIS_URL=redis://39.44.154.244:6379
+REDIS_URL=redis://128.199.135.131:6379
+MONGODB_URI = mongodb+srv://mfaisalusama:zjasUMI2RHCp3Fta@cluster0.1hxkj4a.mongodb.net/Codistan
